--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,4 @@
-/* здесь подключите шрифты */
+@include font-face("Montserrat", 400, normal, "/fonts/montserrat/montserratregular.woff", "/fonts/montserrat/montserratregular.woff2",);
+@include font-face("Montserrat", 700, bold, "/fonts/montserrat/montserratbold.woff", "/fonts/montserrat/montserratbold.woff2");
+@include font-face("Montserrat", 600, normal, "/fonts/montserrat/montserratsemibold.woff", "/fonts/montserrat/montserratsemibold.woff2");
+@include font-face("Montserrat", 500, medium, "/fonts/montserrat/montserratmedium.woff", "/fonts/montserrat/montserratmedium.woff2");
