--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,4 @@
 /* здесь используйте глобальные переменные */
+$Montserrat: "Montserrat", "Arial", sans-serif;
+$tablet-width: 768px;
+$desktop-width: 1440px;
