--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,3 +9,4 @@
 @import "./blocks/header.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/hero.scss";
+@import "./blocks/features.scss";
